--- a/html/index.html
+++ b/html/index.html
@@ -23,10 +23,10 @@
     </ul>
 
     <a name="color"></a><h2>Module Color</h2>
-    <div id="tests"></div>
+    <div id="doc-color"></div>
 
     <a name="scheme-md"></a><h2>Module Color.Scheme.MaterialDesign</h2>
-    <div id="tests-md"></div>
+    <div id="doc-scheme-md"></div>
 
     <script type="text/javascript" src="test.js"></script>
   </body>
