--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <ul>
       <li><a href="#color">Color</a></li>
       <li><a href="#scheme-md">Color.Scheme.MaterialDesign</a></li>
+      <li><a href="#scheme-x11">Color.Scheme.X11</a></li>
+      <li>Color.Scheme.HTML (subset of X11)</li>
     </ul>
 
     <a name="color"></a><h2>Module Color</h2>
@@ -27,6 +29,9 @@
 
     <a name="scheme-md"></a><h2>Module Color.Scheme.MaterialDesign</h2>
     <div id="doc-scheme-md"></div>
+
+    <a name="scheme-x11"></a><h2>Module Color.Scheme.X11</h2>
+    <div id="doc-scheme-x11"></div>
 
     <script type="text/javascript" src="test.js"></script>
   </body>
