--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,7 @@
     <ul>
       <li><a href="#color">Color</a></li>
       <li><a href="#blending">Color.Blending</a></li>
+      <li><a href="#gradient">Color.Gradient</a></li>
       <li><a href="#scheme-md">Color.Scheme.MaterialDesign</a></li>
       <li><a href="#scheme-x11">Color.Scheme.X11</a></li>
       <li>Color.Scheme.HTML (subset of X11)</li>
@@ -42,6 +43,9 @@
 
     <a name="blending"></a><h2>Module Color.Blending</h2>
     <div id="doc-blending"></div>
+
+    <a name="gradient"></a><h2>Module Color.Gradient</h2>
+    <div id="doc-gradient"></div>
 
     <a name="scheme-md"></a><h2>Module Color.Scheme.MaterialDesign</h2>
     <div id="doc-scheme-md"></div>
