Add 'harmonic' color schemes, closes #5

--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,7 @@
       <li><a href="#color">Color</a></li>
       <li><a href="#blending">Color.Blending</a></li>
       <li><a href="#gradient">Color.Gradient</a></li>
+      <li><a href="#scheme-harm">Color.Scheme.Harmonic</a></li>
       <li><a href="#scheme-md">Color.Scheme.MaterialDesign</a></li>
       <li><a href="#scheme-x11">Color.Scheme.X11</a></li>
       <li>Color.Scheme.HTML (subset of X11)</li>
@@ -46,6 +47,9 @@
 
     <a name="gradient"></a><h2>Module Color.Gradient</h2>
     <div id="doc-gradient"></div>
+
+    <a name="scheme-harm"></a><h2>Module Color.Scheme.Harmonic</h2>
+    <div id="doc-scheme-harm"></div>
 
     <a name="scheme-md"></a><h2>Module Color.Scheme.MaterialDesign</h2>
     <div id="doc-scheme-md"></div>
