--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <ul>
       <li><a href="#color">Color</a></li>
       <li><a href="#blending">Color.Blending</a></li>
-      <li><a href="#gradient">Color.Gradient</a></li>
+      <li><a href="#scale">Color.Scale</a></li>
+      <li><a href="#scale-perc">Color.Scale.Perceptual</a></li>
       <li><a href="#scheme-harm">Color.Scheme.Harmonic</a></li>
       <li><a href="#scheme-md">Color.Scheme.MaterialDesign</a></li>
       <li><a href="#scheme-x11">Color.Scheme.X11</a></li>
@@ -60,8 +61,11 @@
     <a name="blending"></a><h2>Module Color.Blending</h2>
     <div id="doc-blending"></div>
 
-    <a name="gradient"></a><h2>Module Color.Gradient</h2>
-    <div id="doc-gradient"></div>
+    <a name="scale"></a><h2>Module Color.Scale</h2>
+    <div id="doc-scale"></div>
+
+    <a name="scale-perc"></a><h2>Module Color.Scale.Perceptual</h2>
+    <div id="doc-scale-perc"></div>
 
     <a name="scheme-harm"></a><h2>Module Color.Scheme.Harmonic</h2>
     <div id="doc-scheme-harm"></div>
