--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       .flare-input-number {
         width: 85px;
       }
+      #output3 table {
+        border-collapse: separate;
+        border-spacing: 10px 10px;
+      }
     </style>
     <link href="flarecheck.css" rel="stylesheet">
   </head>
@@ -85,6 +89,10 @@
     <h3>Color blending</h2>
     <div id="input2"></div>
     <div id="output2"></div>
+
+    <h3>Color palettes</h2>
+    <div id="input3"></div>
+    <div id="output3"></div>
 
     <script type="text/javascript" src="test.js"></script>
   </body>
