--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
     <div id="input3"></div>
     <div id="output3"></div>
 
+    <h3>Name that color</h2>
+    <p>
+      This shows the three closest X11 colors as measured by the perceived
+      color distance.
+    </p>
+    <div id="input4"></div>
+    <div id="output4"></div>
+
     <script type="text/javascript" src="test.js"></script>
   </body>
 </html>
