Add Clrs color scheme

--- a/html/index.html
+++ b/html/index.html
@@ -54,6 +54,7 @@
       <li><a href="#scheme-harm">Color.Scheme.Harmonic</a></li>
       <li><a href="#scheme-md">Color.Scheme.MaterialDesign</a></li>
       <li><a href="#scheme-x11">Color.Scheme.X11</a></li>
+      <li><a href="#scheme-clrs">Color.Scheme.Clrs</a></li>
       <li>Color.Scheme.HTML (subset of X11)</li>
     </ul>
 
@@ -79,6 +80,9 @@
 
     <a name="scheme-x11"></a><h2>Module Color.Scheme.X11</h2>
     <div id="doc-scheme-x11"></div>
+
+    <a name="scheme-clrs"></a><h2>Module Color.Scheme.Clrs</h2>
+    <div id="doc-scheme-clrs"></div>
 
     <a name="playground"></a><h2>Playground</h2>
 
