--- a/index.html
+++ b/index.html
@@ -86,25 +86,29 @@
 
     <a name="playground"></a><h2>Playground</h2>
 
-    <h3>Contrast ratio</h2>
+    <h3>Contrast ratio</h3>
     <div id="input1"></div>
     <div id="output1"></div>
 
-    <h3>Color blending</h2>
+    <h3>Color blending</h3>
     <div id="input2"></div>
     <div id="output2"></div>
 
-    <h3>Color palettes</h2>
+    <h3>Color palettes</h3>
     <div id="input3"></div>
     <div id="output3"></div>
 
-    <h3>Name that color</h2>
+    <h3>Name that color</h3>
     <p>
       This shows the three closest X11 colors as measured by the perceived
       color distance.
     </p>
     <div id="input4"></div>
     <div id="output4"></div>
+
+    <h3>cubehelix</h3>
+    <div id="input5"></div>
+    <div id="output5"></div>
 
     <script type="text/javascript" src="test.js"></script>
   </body>
